/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.mycompany.addressbook;

/**
 *
 * @author david
 */
public class GestoreFile {
    
    public static InterfacciaRubrica leggi(String nomefile){
        return null;
    }
    public void scrivi(String nomefile){
        
    }
}
